# multi-arch-container-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.aarch64  Dockerfile.x86_64  GitVersion.yml  README.md  aarch64.ps1  aarch64.sh  aarch64.yaml  appsettings.toml  build.ps1  build.sh  chart.yaml  docker-compose.yml  launch.ps1  launch.sh  microk8s.toml  multi-arch-container-rust.yaml  test.sh  x86_64.ps1  x86_64.sh  x86_64.yaml
.cargo/: config.toml
.devcontainer/: Dockerfile  Invoke-PostCreateCommand.ps1  devcontainer.json  postCreateCommand.sh  postStartCommand.sh
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: build-app.yml  build-chart.yml  build-image.yml  ci.yml  versioning.yml
charts/multi-arch-container-rust/: Chart.yaml  values.yaml
charts/multi-arch-container-rust/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/multi-arch-container-rust/templates/tests/: test-connection.yaml
kustomize/: deployment.yaml  service.yaml
src/: main.rs
